--- a/MySQL Server 8.0/data/my — копия.ini
+++ b/MySQL Server 8.0/data/my — копия.ini
@@ -92,7 +92,7 @@ port=3306
 # basedir="E:/VS projects/Traffic_Lights/MySQL Server 8.0"
 
 # Path to the database root
-datadir=E:\VS projects\Traffic_Lights\MySQL Server 8.0\data\Data
+datadir="E:\VS projects\Traffic_Lights\MySQL Server 8.0\data\Data"
 
 # The default character set that will be used when a new schema or table is
 # created and no character set is defined
