add debugLogger and modal error window in main task

--- a/MySQL Server 8.0/data/my.ini
+++ b/MySQL Server 8.0/data/my.ini
@@ -92,7 +92,7 @@ port=3306
 # basedir="E:/VS projects/Traffic_Lights/MySQL Server 8.0"
 
 # Path to the database root
-datadir="E:\VS projects\Traffic_Lights\MySQL Server 8.0\data\Data"
+datadir="C:\GitHub\Traffic_Lights\MySQL Server 8.0\data\Data"
 
 # The default character set that will be used when a new schema or table is
 # created and no character set is defined
@@ -139,7 +139,7 @@ server-id=1
 lower_case_table_names=1
 
 # Secure File Priv.
-secure-file-priv="E:\VS projects\Traffic_Lights\MySQL Server 8.0\data\Uploads"
+secure-file-priv="C:\GitHub\Traffic_Lights\MySQL Server 8.0\data\Uploads"
 
 # The maximum amount of concurrent sessions the MySQL server will
 # allow. One of these connections will be reserved for a user with
